# rust-notebook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
assorted/pulldown-cmark/input/: test01.md
async-network/: README.md
async-network/[dropped]chatbox/chatbox-server/src/: main.rs
async-network/futures_channels/: Cargo.toml
async-network/futures_channels/src/: .main.rs.swp
async-network/little_book_of_semaphores/ch1/src/: main.rs
async-network/little_book_of_semaphores/ch3/src/: main.rs
async/stream_network/client/: input.txt
cmd-line-tools/pulldown-cmark/input/: markdown-it.md
cmd-line-tools/pulldown-cmark/src/: main.rs
concurrency/time-broadcast/src/: main.rs
concurrency_parallelism/actix-web-rayon-handle-bars-image-resize/: Cargo.toml  README.md
concurrency_parallelism/actix-web-rayon-handle-bars-image-resize/benches/: image_read_convert_benchmark.rs
concurrency_parallelism/actix-web-rayon-handle-bars-image-resize/src/: image_utils.rs  main.rs
concurrency_parallelism/little_book_of_semaphores/: README.md
concurrency_parallelism/little_book_of_semaphores/ch1/: Cargo.toml
concurrency_parallelism/little_book_of_semaphores/ch3/: Cargo.toml
concurrency_parallelism/little_book_of_semaphores/ch3/src/: main.rs
concurrency_parallelism/time-broadcast/: Cargo.toml
data/apache-arrow-csv/: Cargo.toml
data/apache-arrow-csv/data/: WEOApr2020all.csv
data/apache-arrow-csv/src/: main.rs
data/mmap_json_file/: Cargo.toml  README.md
data/mmap_json_file/data/: test_multiple.json  test_simple_nested.json  test_simple_sum.json
data/mmap_json_file/examples/simple-usage/: Cargo.toml
data/mmap_json_file/examples/simple-usage/data/: test_simple.json
data/mmap_json_file/examples/simple-usage/src/: main.rs
data/mmap_json_file/src/: lib.rs  mod.rs
data/mmap_json_file/tests/: main.rs
database-adapters/diesel-orm-postgres-sakila/: Cargo.toml  diesel.toml
database-adapters/diesel-orm-postgres-sakila/src/: main.rs  models.rs  schema.rs
database-adapters/postgresql/: .env  Cargo.toml
database-adapters/postgresql/migrations/2020-05-07-051957_pakila_db/: up.sql
database-adapters/postgresql/migrations/2020-05-07-051957_pakila_db/src/: schema.rs
database-adapters/postgresql/src/: main.rs  models.rs  schema.rs
futures-tokio/chatbox/chatbox-lib/: Cargo.toml
futures-tokio/chatbox/chatbox-lib/src/: lib.rs
futures-tokio/chatbox/chatbox-server/: Cargo.toml
futures-tokio/chatbox/chatbox-server/src/: reader.rs
futures-tokio/chatbox/stream_u8_lib/: Cargo.toml
futures-tokio/futures_channels/src/: main.rs
futures-tokio/stream_network/: Cargo.toml
futures-tokio/stream_network/client/: Cargo.toml
futures-tokio/stream_network/server/: Cargo.toml
futures-tokio/stream_network/server/src/: main.rs
futures-tokio/stream_network/src/: main.rs
futures-tokio/stream_u8_lib/src/: lib.rs
futures-tokio/tcpstream_lib/: Cargo.toml
futures-tokio/tcpstream_lib/src/: lib.rs
futures-tokio/tokio-util-client-server/client/: Cargo.toml
futures-tokio/tokio-util-client-server/client/src/: main.rs
futures-tokio/tokio-util-simple-echo-server/server/: Cargo.toml
general/: Cargo.toml  README.md
general/rust-practice/: Cargo.toml
general/rust-practice/src/: arc.rs  array.rs  closures.rs  controlflow.rs  conversion_from_into.rs  dispatch.rs  generics.rs  hashmap.rs  heap.rs  hof.rs  lifetime.rs  main.rs  messages_between_threads.rs  operator_overloading.rs  options.rs  ownership.rs  pattern_matching.rs  rc.rs  rect.rs  smart_pointers.rs  strings.rs  structex.rs  too_many_lists.rs  too_many_lists_take2.rs  too_many_lists_take3_rc.rs  trait_extend_types.rs  traits.rs  tuples.rs  vectors.rs  vectors_different_objects.rs
iot/mqtt_client/: .env  Cargo.toml  README.md
iot/mqtt_client/src/: main.rs
micro-services/actix-web-mongodb/: .env  Cargo.toml  actix-web-mongo user db.postman_collection.json
micro-services/actix-web-mongodb/client/: package.json
micro-services/actix-web-mongodb/client/src/: App.js  createUser.js  userEdit.js  users.js
micro-services/actix-web-mongodb/server/: Cargo.toml
micro-services/actix-web-mongodb/server/src/: main.rs
micro-services/actix-web-mongodb/server/src/model/: users.rs
micro-services/actix-web-mongodb/server/static/: index.html
micro-services/actix-web-mongodb/src/: main.rs
micro-services/actix-web-mongodb/src/model/: users.rs
micro-services/grpc-tonic-totp/: Cargo.toml  README.md  build.rs
micro-services/grpc-tonic-totp/client/: client.js  package.json  sample.html  user_totp_grpc_web_pb.js  user_totp_pb.js
micro-services/grpc-tonic-totp/envoy_proxy/: config.yaml
micro-services/grpc-tonic-totp/proto/: user_totp.proto
micro-services/grpc-tonic-totp/server/src/: server.rs
micro-services/grpc-tonic-totp/src/: server.rs
micro-services/warp-web-sockets/: Cargo.toml  README.md
micro-services/warp-web-sockets/load_test/: README.md  config.yml
micro-services/warp-web-sockets/load_test/wss-func/: func.js
micro-services/warp-web-sockets/src/: main.rs
micro-services/warp-web-sockets/src/api_handler/: filters.rs  handler.rs  mod.rs
micro-services/warp-web-sockets/src/common/: types.rs
micro-services/warp-web-sockets/src/redis_wrapper/: init.rs
micro-services/warp-web-sockets/src/topics/: t.rs
micro-services/warp-web-sockets/test/: index.html  warp-web-sockets.postman_collection.json
pulldown-cmark/: Cargo.toml  out.html
pulldown-cmark/input/css/: test010.css
pulldown-cmark/src/: main.rs
quickcheck/qc/: Cargo.toml
quickcheck/qc/src/: lib.rs
serverless/aws-lambda/: Cargo.toml  README.md
serverless/aws-lambda/src/: main.rs
tokio/client-server/server/: Cargo.toml
tokio/tokio-echo-chat-server/src/: main.rs
unit-testing/criterion_benchmarking/: Cargo.toml
unit-testing/criterion_benchmarking/benches/: image_read_convert_benchmark.rs
unit-testing/criterion_benchmarking/src/: image_utils.rs  main.rs
wasm/reactjs-wasm-word-counter/: Cargo.toml
wasm/reactjs-wasm-word-counter/src/: lib.rs
wasm/reactjs-wasm-word-counter/word-counter/: README.md  package.json
(+14 files in other folders)
