[package]
name = "actix-web-rayon-handle-bars-image-resize"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

[dependencies]
actix-multipart = "0.2.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
futures = "0.3.5"
image = "0.23.4"
rayon = "1.3.0"
actix-files = "0.2.1"
handlebars = "3.0.1"
bytes = "0.5.4"
std-logger = "0.3.6"

[lib]
name = "image_utils"
path = "src/image_utils.rs"

[dev-dependencies]
criterion = "0.3.2"
criterion-macro = "0.3.2"

[[bench]]
name = "image_read_convert_benchmark"
harness = false

[[bin]]
name = "image_resizer"
path = "src/main.rs"
