[package]
name = "postgresql"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
diesel-derive-enum = { version = "0.4", features = ["postgres"] } # "postgres", "mysql" or "sqlite"
