[package]
name = "actix-web-mongodb"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
mongodb = "0.9.0"
bson = "0.14.0"
r2d2 = "0.8.8"
r2d2-mongodb = "0.2.2"
dotenv = "0.15.0"
serde = "1.0.106"
serde_derive = "1.0.106"
actix-files = "0.2.1"
serde_json = "1.0.52"
listenfd = "0.3"
