[package]
name = "warp-web-sockets"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2.3"
serde = {version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
futures = { version = "0.3.5", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
redis = { version = "0.16.0", features = ["tokio-rt-core", "tokio-comp", "aio"] }
