[package]
name = "aws-lambda"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
log = "0.4.11"
simple_logger = "1.6.0"
data-encoding = "2.3.0"
failure = "0.1.8"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
