[package]
name = "criterion-benchmarking"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

[dependencies]
image = "0.23.4"

[dev-dependencies]
criterion = "0.3.2"
criterion-macro = "0.3.2"

[[bench]]
name = "image_read_convert_benchmark"
harness = false

[lib]
name = "image_utils"
path = "src/image_utils.rs"

[[bin]]
name = "image_resizer"
path = "src/main.rs"
