[package]
name = "ch3"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
futures = "0.3.4"
tokio = { version = "0.2.21", features = ["full"] }
crossbeam-channel = "0.4.2"
