[package]
name = "chatbox-server"
version = "0.1.0"
authors = ["vratnam <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
futures = "0.3.4"
futures-core = "0.3.4"
tokio = "0.2.20"
chatbox-lib =  { path = "../chatbox-lib/", version = "0.1.0" }
stream_u8_lib =  { path = "../stream_u8_lib/", version = "0.1.0" }
pin-project = "0.4.9"
