[package]
name = "tokio"
version = "0.1.0"
authors = ["vratnam <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures ={ version = "0.3.4", features = ["thread-pool"] }
threadpool = "1.8.0"
