[package]
name = "simple-usage"
version = "0.1.0"
authors = ["Venkata Ratnam Vadhri <vadhrivenkata.ratnam@nagra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmap_json_file = "0.1.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
